--- a/- Production/productdetails.html
+++ b/- Production/productdetails.html
@@ -48,7 +48,7 @@
                         <a class="nav-link active" href="products.html">Products</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="Orders" href="#">Orders</a>
+                        <a class="nav-link" aria-current="Orders" href="orders.html">Orders</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="support.html">Support</a>
