--- a/- Production/productdetails.html
+++ b/- Production/productdetails.html
@@ -42,7 +42,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0 ml-auto align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="landing.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="products.html">Products</a>
